--- a/app/views/contenders/index.html.erb
+++ b/app/views/contenders/index.html.erb
@@ -2,10 +2,12 @@
 
 <table>
   <tr>
+    <th>Headshot</th>
     <th>Uname</th>
     <th>Fullname</th>
     <th>Wins</th>
     <th>Loses</th>
+    <th>Banner</th>
     <th></th>
     <th></th>
     <th></th>
@@ -13,10 +15,12 @@
 
 <% @contenders.each do |contender| %>
   <tr>
+    <td><%= image_tag contender.headshot, :width => '75' %></td>
     <td><%= contender.uname %></td>
     <td><%= contender.fullname %></td>
     <td><%= contender.wins %></td>
     <td><%= contender.loses %></td>
+    <td><%= image_tag contender.banner, :width => '400' %></td>
     <td><%= link_to 'Show', contender %></td>
     <td><%= link_to 'Edit', edit_contender_path(contender) %></td>
     <td><%= link_to 'Destroy', contender, confirm: 'Are you sure?', method: :delete %></td>
