--- a/app/views/contenders/index.html.erb
+++ b/app/views/contenders/index.html.erb
@@ -30,4 +30,4 @@
 
 <br />
 
-<%= link_to 'New Contender', new_contender_path %>
+<%= link_to 'New Contender', new_contender_path, :class => 'btn small' %>
