--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,15 @@
   <%= yield %>
 
 </div>
+<footer>
+  <div class="container">
+    <p class="pull-right">
+      <a href="https://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="mroth">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
+    </p>
+    <p>Designed and built by <a href="https://twitter.com/mroth">@mroth</a></p>
+    <p>Wikipedia is a great service and the folks in the Wikimedia Foundation are not just good-looking, but also hard-working and awesome.  If you enjoy this parody, you should probably <a href="http://wikimediafoundation.org/wiki/Fundraising">donate to Wikipedia</a>.
+  </div>
+</footer>
 
 </body>
 </html>
