--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,4 +1,7 @@
-body {
+
+
+/* default rails stuff below */
+/*body {
   background-color: #fff;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
@@ -54,3 +57,4 @@ div {
   ul li {
     font-size: 12px;
     list-style: square; } }
+*/
