--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,17 @@
     </p>
     <p>Designed and built by <a href="https://twitter.com/mroth">@mroth</a></p>
     <p>Wikipedia is a great service and the folks in the Wikimedia Foundation are not just good-looking, but also hard-working and awesome.  If you enjoy this parody, you should probably <a href="http://wikimediafoundation.org/wiki/Fundraising">donate to Wikipedia</a>.
+      
+    <div>
+      <p class="pull-left"> 
+        <%= image_tag "truckerhat_sm.jpg", :width => 75 %>
+      </p>
+      <p>
+        <span class="label notice">New!</span> Now available super fun Personal Appeals apparel!  Order now!
+      </p>
+    </div>
   </div>
+
 </footer>
 
 </body>
