--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,15 +27,15 @@
     <p class="pull-right">
       <a href="https://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="mroth">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
     </p>
-    <p>Designed and built by <a href="https://twitter.com/mroth">@mroth</a></p>
-    <p>Wikipedia is a great service and the folks in the Wikimedia Foundation are not just good-looking, but also hard-working and awesome.  If you enjoy this parody, you should probably <a href="http://wikimediafoundation.org/wiki/Fundraising">donate to Wikipedia</a>.
+    <p>Designed and built by <a href="https://twitter.com/mroth">@mroth</a>. Make this site better, <a href="https://github.com/mroth/personalappeals">fork it on github</a>.</p>
+    <p>Wikipedia is a great service and the folks in the Wikimedia Foundation are not just good-looking, but also hard-working and awesome.  If you enjoy this parody, you should probably <a href="http://wikimediafoundation.org/wiki/Fundraising">donate to Wikipedia</a>.</p>
       
     <div>
       <p class="pull-left"> 
         <%= image_tag "truckerhat_sm.jpg", :width => 75 %>
       </p>
       <p>
-        <span class="label notice">New!</span> Now available super fun Personal Appeals apparel!  Order now!
+        <span class="label notice">New!</span> Now available: super fun Personal Appeals apparel!  <a href="http://www.zazzle.com/a_personal_appeal_hat-148718509418049586">Order now!</a>
       </p>
     </div>
   </div>
