--- a/app/views/battles/index.html.erb
+++ b/app/views/battles/index.html.erb
@@ -6,9 +6,9 @@
     <th>Winner</th>
     <th>Loser</th>
     <th>Voter</th>
+    <!-- <th></th>
     <th></th>
-    <th></th>
-    <th></th>
+    <th></th> -->
   </tr>
 
 <% @battles.each do |battle| %>
@@ -17,9 +17,9 @@
     <td><%= battle.winner.uname %></td>
     <td><%= battle.loser.uname %></td>
     <td><code><%= battle.voter %></code></td>
-    <td><%= link_to 'Show', battle %></td>
+    <!-- <td><%= link_to 'Show', battle %></td>
     <td><%= link_to 'Edit', edit_battle_path(battle) %></td>
-    <td><%= link_to 'Destroy', battle, confirm: 'Are you sure?', method: :delete %></td>
+    <td><%= link_to 'Destroy', battle, confirm: 'Are you sure?', method: :delete %></td> -->
   </tr>
 <% end %>
 </table>
