--- a/app/views/battles/new.html.erb
+++ b/app/views/battles/new.html.erb
@@ -18,15 +18,26 @@
     
     <% if !flash[:last_battle_id].nil? %>
       
-      <div class="alert-message block-message warning">
-        <p><strong>sidenote</strong> with results of your last vote</p>
-        <ul>
-          <li>winner: <%= @last_winner.uname  %>, <%= @last_winner.wins %> wins (<%= number_to_percentage @last_winner.ratio * 100, :precision => 0 %>)</li>
-          <li>loser: <%=  @last_loser.uname %>, <%= @last_loser.wins %> wins (<%= number_to_percentage @last_loser.ratio * 100, :precision => 0 %>)</li>
-        </ul>
-        <div class="alert-actions">
+      <div class="results alert-message block-message warning">
+        <p><strong>Results</strong></p>
+        
+        <table>
+          <tr>
+            <td><%= image_tag @last_winner.headshot, :width => 24, :style => "border: 2px solid green;" %>
+            <td><%= @last_winner.wins %> wins 
+            <td>(<%= number_to_percentage @last_winner.ratio * 100, :precision => 0 %>)
+          </tr>
+          <tr>
+            <td><%= image_tag @last_loser.headshot, :width => 24, :style => "border: 2px solid red;" %>
+            <td><%= @last_loser.wins %> wins 
+            <td>(<%= number_to_percentage @last_loser.ratio * 100, :precision => 0 %>)
+          </tr>
+        </table>
+        
+        <p><%= link_to "See the full rankings. »", contenders_path %></p>
+        <!-- <div class="alert-actions">
           <a class="btn small" href="#">Do something</a>
-        </div>
+        </div> -->
       </div>
     <% end %>
     
