--- a/app/views/battles/index.html.erb
+++ b/app/views/battles/index.html.erb
@@ -6,6 +6,7 @@
     <th>Winner</th>
     <th>Loser</th>
     <th>Voter</th>
+    <th>When</th>
     <!-- <th></th>
     <th></th>
     <th></th> -->
@@ -17,6 +18,7 @@
     <td><%= battle.winner.uname %></td>
     <td><%= battle.loser.uname %></td>
     <td><code><%= battle.voter %></code></td>
+    <td><%= time_ago_in_words battle.created_at %> ago</td>
     <!-- <td><%= link_to 'Show', battle %></td>
     <td><%= link_to 'Edit', edit_battle_path(battle) %></td>
     <td><%= link_to 'Destroy', battle, confirm: 'Are you sure?', method: :delete %></td> -->
