drop subtitle; drop green non-button; hover border; mask [x]

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -6,8 +6,27 @@ footer {
 	}
 }
 
+form.new_battle {
+	position: relative;
+}
+
+form.new_battle:after {
+	content: " ";
+	position: absolute;
+	height: 20px;
+	width: 20px;
+	right: 36px;
+	top: 10px;
+	background: #fff;
+}
+
 .bannerimg {
 	width: 640px;
 	height: auto;
-	border: none;
+	border: 2px solid transparent;
+	position: relative;
+}
+
+.bannerimg:hover {
+	border-color: #46A546;
 }
