--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
 <div class="container">
   <div class="page-header">
-    <h1 style="color: navy;">Personal Appeals <small>Hot or Not of the Wikipedia solicitors</small></h1>
+    <h1 style="color: navy;">Personal Appeals</h1>
   </div>
   
   <ul class="tabs">
