removve square thingies

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -10,6 +10,7 @@ form.new_battle {
 	position: relative;
 }
 
+/*
 form.new_battle:after {
 	content: " ";
 	position: absolute;
@@ -19,6 +20,7 @@ form.new_battle:after {
 	top: 10px;
 	background: #fff;
 }
+*/
 
 .bannerimg {
 	width: 640px;
