static url in tweet button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 <footer>
   <div class="container">
     <p class="pull-right">
-      <a href="https://twitter.com/share" class="twitter-share-button" data-text="Personal Appeals - Hot or Not of the Wikipedia solicitors" data-count="horizontal" data-related="mroth:the guy who made this site">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://personalappeals.com" data-text="Personal Appeals - Hot or Not of the Wikipedia solicitors" data-count="horizontal" data-related="mroth:the guy who made this site">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
     </p>
     <p>Designed and built by <a href="https://twitter.com/mroth">@mroth</a>. Make this site better, <a href="https://github.com/mroth/personalappeals">fork it on github</a>.</p>
     <p><strong>Please read:</strong> A personal appeal from the jerk who made this parody site. Wikipedia is a great service and the folks in the Wikimedia Foundation are not just good-looking, but also hard-working and awesome.  If you enjoy this parody, you should probably <a href="http://wikimediafoundation.org/wiki/Fundraising">donate to Wikipedia</a>.</p>
